[package]
name = "vscode-ipc-sock-hack"
version = "1.1.0"
edition = "2021"

[dependencies]
exec = "0.3.1"
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
tempfile = "3.26.0"
uuid = { version = "1.21.0", features = ["v4", "fast-rng"] }

[[bin]]
name = "vscode-ipc-sock-hack"
path = "bin/main.rs"
