[package]
name = "vscode-ipc-sock-hack"
version = "1.1.0"
edition = "2021"

[dependencies]
exec = "0.3.1"
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
uuid = { version = "1.23.1", features = ["v4", "fast-rng"] }

[[bin]]
name = "vscode-ipc-sock-hack"
path = "bin/main.rs"
